ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
10/25/09 Oleh Derevenko
		* Macros changed to static inline functions in odemath.h and related files.
		  Some code duplication has been eliminated across the files.

		* Fixed handling of --disable-asserts and --enable-double-precision 
		  (absence of --enable-double-precision) in configure script. The script
		  was not appending compiler defines correctly.

		* dWorldStep implementation changed to remove allocation on stack. 
		  dUSE_MALLOC_FOR_ALLOCA define has been removed as well as corresponding
		  configuration parameter. Also dMemoryFlag public variable has been removed.
		  (look for presence of ODE_EXT_malloc_not_alloca configuration string if
		  your application is dependent on that variable).

09/05/09 Oleh Derevenko
		* dWorldStepFast1 API removed along with dWorld[Get/Set]AutoEnableDepthSF1

08/29/09 Oleh Derevenko
		* Fixed uninitialized floating point array used in computations.

08/12/09 Oleh Derevenko
		* A typo fixed in dGeomCopyOffsetRotation() (final_posr was used instead 
		of offset_posr). Reported by Tilmann.

08/11/09 Daniel K. O.
        * Made sure neither dSINGLE or dDOUBLE is defined by default; the user
          should always explicitly specify the precision.

06/27/09 Oleh Derevenko
        * New functions have been added:
           - dWorldUseSharedWorkingMemory
           - dWorldCleanupWorkingMemory
           - dWorldSetStepMemoryReservationPolicy
           - dWorldSetStepMemoryManager
		
06/25/09 Remi Ricard (papaDoc)
        * Add limit to the to the second axis of the universal joint
         for the pu joint.

06/14/09 Oleh Derevenko